2004-03-10  Martin Baulig  <martin@ximian.com>

	* MethodBase.cs (MethodBase): Implemented
	GetGenericMethodDefinition() and HasGenericParameters.

2004-03-09  Martin Baulig  <martin@ximian.com>

	* MonoEvent.cs (MonoEventInfo): Replaced `parent' with
	`declaring_type' and `reflected_type'.
	(MonoEvent): Distinguish between declaring and reflected type.

2004-02-25  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs
	(MonoGenericInst.GetNestedTypes): Override this.

2004-02-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Binder.cs:
	(SelectProperty): check the return Type if provided.

2004-02-17  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst.GetProperties): Added
	support for properties.

2004-02-17  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst.GetMethods): Walk up the
	class hierarchy and return members from the parent classes.
	(GetConstructors, GetFields): Likewise.

2004-02-17  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst.initialize): Don't inflate
	all the members here; we only do this for members of the current
	class and only when they're actually queried for.

2004-02-12  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoInflatedField): Removed.

	* MonoGenericInst.cs (MonoInflatedMethod, MonoInflatedCtor): Removed.

2004-02-08  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst.inflate): Pass recursive
	invocations the `reflected' type as `reflected', not `this'.
	(MonoInflatedMethod, MonoInflatedCtor): Reflect latest runtime changes.

2004-02-08  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst.GetParentType): New interncall.
	(MonoGenericInst.GetInterfaces_internal): New interncall.
	(MonoGenericInst): Reflect latest API changes; use GetParentType()
	and GetInterfaces_internal() instead of the fields.	

2004-02-06  Martin Baulig  <martin@ximian.com>
