@@ -1,3 +1,8 @@
+2004-03-23  Martin Baulig  <martin@ximian.com>
+
+	* MonoMethod.cs (MonoMethod.ToString): Don't include the namespace
+	if it's the empty string.
+
 2004-03-10  Martin Baulig  <martin@ximian.com>
 
 	* MethodBase.cs (MethodBase): Implemented
